Add side banner

--- a/index.html
+++ b/index.html
@@ -9,21 +9,37 @@
 </head>
 <body>
     <div class="side">
-        <div class="ctner">
+        <div class="side--ctner">
             <div class="logo">
                 <img src="nini.png" alt="Logo">
-                <span>NINI</span>
+                nini
             </div>
         </div>
         <div class="footer">some text by author</div>
     </div>
     <div class="main">
-        <div class="main__container">
+        <div class="main--ctner">
             <div class="header">This is not a real online service! we Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit autem placeat, cum architecto culpa vitae voluptatem, harum natus, fuga illo vel quasi nam animi iusto unde! Fugit officia earum ut?</div>
-            <div class="form"></div>
+            You know you want to.
+            <div class="form">
+                Let's do this!
+                <form class="form--content">
+                    <label for="first_name">First Name</label>
+                        <input type="text" name="first_name" id="first_name">
+                    <label for="last_name">Last Name</label>
+                        <input type="text" name="last_name" id="last_name">
+                    <label for="email">Email</label>
+                        <input type="email" name="email" id="email">
+                    <label for="phone_number">phone number</label>
+                        <input type="tel" name="phophone_numberne" id="phone_number">
+                    <label for="pw">Password</label>
+                        <input type="password" name="pw" id="pw">
+                    <label for="pw_confirm">confirm password</label>
+                        <input type="password" name="pw_confirm" id="pw_confirm">
+                </form>
+            </div>
             <button class="create-acc-btn">Create Account</button>
             <div class="login">Already have an account? <a href="http://google.com">Log In</a></div>
-
         </div>
     </div>
 </body>
