--- a/index.html
+++ b/index.html
@@ -19,23 +19,40 @@
     </div>
     <div class="main">
         <div class="main--ctner">
-            <div class="header">This is not a real online service! we Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit autem placeat, cum architecto culpa vitae voluptatem, harum natus, fuga illo vel quasi nam animi iusto unde! Fugit officia earum ut?</div>
-            You know you want to.
+            <!-- this ctner is for aligning the whole section vertically -->
+            <div class="header">
+                <div class="header--ctner">
+                    <p>This is not a real online service! Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit autem placeat, cum architecto culpa vitae voluptatem, harum natus, fuga illo vel quasi nam animi iusto unde! Fugit officia earum ut?</p>
+                    <p>You <i>know</i> you want to.</p>
+                </div>
+            </div>
             <div class="form">
-                Let's do this!
+                <span>Let's do this!</span>
                 <form class="form--content">
-                    <label for="first_name">First Name</label>
+                    <div class="form--content--ctr">
+                        <label for="first_name">First Name</label>
                         <input type="text" name="first_name" id="first_name">
-                    <label for="last_name">Last Name</label>
+                    </div>
+                    <div class="form--content--ctr">
+                        <label for="last_name">Last Name</label>
                         <input type="text" name="last_name" id="last_name">
-                    <label for="email">Email</label>
+                    </div>
+                    <div class="form--content--ctr">
+                        <label for="email">Email</label>
                         <input type="email" name="email" id="email">
-                    <label for="phone_number">phone number</label>
-                        <input type="tel" name="phophone_numberne" id="phone_number">
-                    <label for="pw">Password</label>
+                    </div>
+                    <div class="form--content--ctr">
+                        <label for="phone_number">phone number</label>
+                        <input type="tel" name="phone_number" id="phone_number">
+                    </div>
+                    <div class="form--content--ctr">
+                        <label for="pw">Password</label>
                         <input type="password" name="pw" id="pw">
-                    <label for="pw_confirm">confirm password</label>
+                    </div>
+                    <div class="form--content--ctr">
+                        <label for="pw_confirm">confirm password</label>
                         <input type="password" name="pw_confirm" id="pw_confirm">
+                    </div>
                 </form>
             </div>
             <button class="create-acc-btn">Create Account</button>
